# AssetValidator

./: .gitignore  AssetValidator.py  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MONETIZATION.md  README.md  example.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-landing.yml
landing/: app.js  index.html  styles.css
pipeline/: __init__.py
pipeline/config/: __init__.py  settings.py
pipeline/core/: __init__.py  asset_validator.py  db_interface.py  exceptions.py  utils.py
pipeline/gui/: __init__.py  app.py
tests/: test_asset_validator.py
