[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asset-validator"
version = "0.1.4"
description = "Asset Validator (Production Validation Framework): production-grade asset validation for VFX pipelines with USD support."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.21.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
]
cli = [
  "click>=8.0.0",
]
dev = [
  "ruff>=0.12.0",
  "mypy>=1.10.0",
  "pre-commit>=3.7.0",
]
postgres = [
  "psycopg2-binary>=2.9.0",
]
mongodb = [
  "pymongo>=4.0.0",
]
gui = [
  "PySide6>=6.6.0",
]

[project.scripts]
validate-assets = "pipeline.core.asset_validator:main_cli"
asset-validator-gui = "pipeline.gui.app:main"

[tool.setuptools]
py-modules = ["AssetValidator"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "pipeline/core/.mypy_cache*"]

[tool.ruff]
line-length = 100
target-version = "py38"
extend-exclude = [
  ".mypy_cache",
  ".pytest_cache",
  "build",
  "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = [
  "E501",
  "UP006",
  "UP007",
  "UP045",
]

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = "(^tests/|/\\.mypy_cache/)"

